Refactoring to java 25, also Checker splitting into few files, fix bugs inside